# coredoc

./: CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
debian/: changelog  control  copyright  install  rules
docs/: ARCHITECTURE.md  SECURITY.md  TRIAGE.md  USER_GUIDE.md
man/: coredoc.1
packaging/alpine/: APKBUILD
packaging/arch/: PKGBUILD
packaging/flatpak/: io.github.coredoc.coredoc.yml
packaging/nix/: flake.nix
packaging/rpm/: coredoc.spec
packaging/scripts/: build_deb_manual.sh  test_in_arch.sh  test_in_fedora.sh
scripts/: install.sh
scripts/install/: alpine.sh  arch.sh  common.sh  debian-ubuntu.sh  fedora.sh  nix.sh  opensuse.sh
src/coredoc/: __init__.py  changes.py  cli.py  guidance.py  models.py  runner.py  support_bundle.py
src/coredoc/backends/: __init__.py  audio.py  base.py  clean.py  hardware.py  logs.py  permissions.py  sleep.py  utils.py  wayland.py
src/coredoc/doctors/: __init__.py  audio.py  base.py  clean.py  core.py  hardware.py  logs.py  permissions.py  sleep.py  wayland.py
src/coredoc/triage/: __init__.py  engine.py  models.py  rules.toml
src/coredoc/tui/: __init__.py  app.py
tests/: test_backends.py  test_cli_tui.py  test_guidance.py  test_triage.py
