[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coredoc"
version = "0.2.0"
description = "Modular TUI-based Linux diagnostics and first-aid tool"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "coredoc contributors"}]
keywords = ["linux", "diagnostics", "tui", "system", "support"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Topic :: System :: Systems Administration",
]
dependencies = ["textual>=0.58,<2"]

[project.urls]
Homepage = "https://github.com/CoreOG-fr/coredoc"
Repository = "https://github.com/CoreOG-fr/coredoc"
Issues = "https://github.com/CoreOG-fr/coredoc/issues"

[project.scripts]
coredoc = "coredoc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
coredoc = ["py.typed", "triage/*.toml"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/coredoc/backends"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501", "SIM105"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"
